data/derived/fa15/progs/unify/prog2502.ml.out
Characters 81-82:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> 'b -> 'c -> 'a
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside 'c -> 'a
